2010-01-17  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* ov-cell.cc (Fstruct2cell): Add example, add test.
	* DLD-FUNCTIONS/cellfun.cc (Fcellfun, Fnum2cell), ov-struct.cc
	(Fisstruct): Fix docstring.
	* DLD-FUNCTIONS/cellfun.cc (Fcellslices, Fisfield, Ffieldnames,
	Frmfield): Add test.
        * ov-struct.cc (Fcell2struct): Fix docstring, add test.

2010-01-16  David Bateman  <dbateman@free.fr>

	* graphics.h.in (line::properties, surface::properties,
	patch::properties): Allow the use of a "@" marker.
	(axes::properties): Add markerorder properties to set the
	order of the marker styles for the "@" marker.

2010-01-15  Jaroslav Hajek  <highegg@gmail.com>

	* pt-mat.cc (SINGLE_TYPE_CONCAT, DO_SINGLE_TYPE_CONCAT,
	DO_SINGLE_TYPE_CONCAT_NO_MUTATE): Remove macros.
	(single_type_concat, do_single_type_concat,
	do_single_type_concat_no_mutate): New template funcs.
	(tree_matrix::rvalue1): Call them here.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* strfns.cc (do_strcmp_fun, 
	strcmp_array_op, strcmp_str_op,
	strcmpi_array_op, strcmpi_str_op,
	strncmp_array_op, strncmp_str_op,
	strncmpi_array_op, strncmpi_str_op): New functions.
	(Fstrcmp, Fstrncmp): Reimplement using do_strcmp_fun.
	(Fstrcmpi, Fstrncmpi): New defuns.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/bsxfun.cc (maybe_fill_table): register relational
	handlers for char arrays.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (octave_class::numel (const octave_value_list&)): Don't
	attempt to query overloaded size.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* ov-fcn.h (octave_function (const std::string&, const std::string&)):
	Explicitly initialize all data members.

	* ov-builtin.h (octave_builtin::octave_builtin):
	Explicitly initialize base class object and data member.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__magick_read__.cc (read_indexed_images):
	No need to explicitly call chop_trailing_singletons now.
